--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "courseproject",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
 
-    "start": "nodemon index.js"
+    "start": "nodemon ."
   },
   "author": "",
   "license": "ISC",
