--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-
     "start": "nodemon ."
   },
   "author": "",
@@ -14,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.4.1",
     "morgan": "^1.10.0",
     "node-fetch": "^3.0.0",
     "nodemon": "^2.0.13"
